RPP: Replace two-line Total/Self time with one-line Duration (w/ self)
Also less millisecond conversions, which is a small perf win, but mostly
to keep math in Micro until presentation.

Drivebys:
- Define type for TimeRangeCategoryStats
- Clarify when we show a pie chart

Bug: 395572753
Change-Id: I70c3d4cddad27a75d4a68ee2123a3408901e0627
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6245624
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -203,6 +203,7 @@
 .timeline-details-view-row {
   padding-left: 10px;
   min-height: 20px;
+  line-height: 16px; /* Vertically center text within row, important for background-color rows like .timeline-details-warning */
 }
 
 .timeline-details-view-block .timeline-details-stack-values {
