[GM3Restyling] Update Reporting API empty states
This updates the empty states for reporting api, and also
hides the bottom panel for viewing the details, if no reports
have been rendered yet.

Before: https://i.imgur.com/9l8UJTI.png
After: https://imgur.com/a/shxzNND
Bug: 325443331
Change-Id: I6678ef1ddf0c19fb5e11f313ff224fa8c2f303c4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6233913
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/application/components/reportingApiGrid.css
+++ b/front_end/panels/application/components/reportingApiGrid.css
@@ -19,17 +19,7 @@
   font-size: 15px;
   background-color: var(--sys-color-surface2);
   padding: 1px 4px;
-}
-
-.reporting-placeholder {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 13px;
-  color: var(--sys-color-token-subtle);
-  min-width: min-content;
-  text-align: center;
+  flex-shrink: 0;
 }
 
 devtools-data-grid {
