[GM3Restyling] Update Recorder > export dialog menu
Screenshot: https://imgur.com/a/KwJ4fEY

Bug: 325442935
Change-Id: Iadde1e6ae1a93be7e803cbaaf10d2fb6a93d35ac
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243679
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/components/menus/menuItem.css
+++ b/front_end/ui/components/menus/menuItem.css
@@ -22,7 +22,7 @@
 }
 
 :host-context(devtools-menu-group) .menu-item {
-  padding: 4px 30px 4px 36px;
+  padding: var(--sys-size-3) 0 var(--sys-size-3) 26px;
 }
 
 .is-selected-item::before {
