--- a/front_end/ui/components/menus/menu.css
+++ b/front_end/ui/components/menus/menu.css
@@ -18,7 +18,7 @@
 
 #container {
   list-style-type: none;
-  margin: 0;
+  margin-top: var(--sys-size-4);
   padding: 0;
   width: fit-content;
   display: block;
