Leave padding for focus outline in performance tooltip
R=jacktfranklin@chromium.org

Fixed: 378637756
Change-Id: If2cf5672180f3da39a55e381a2f800384ec4145a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6244421
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/timeline/timelineFlamechartPopover.css
+++ b/front_end/panels/timeline/timelineFlamechartPopover.css
@@ -6,6 +6,9 @@
 
 .timeline-flamechart-popover {
   overflow: hidden;
+  /* extend padding into the parent element to avoid clipping the focus-visible outline. */
+  padding: 4px;
+  margin: -4px;
 }
 
 .timeline-flamechart-popover devtools-interaction-breakdown {
