[GM3Restyling] Update devtools-select-menu dialog styles
Screenshot: https://imgur.com/a/1XQrOUM

Bug: 325442935
Change-Id: Iddaf7997ad02e1baa4927c4be5ec550bec1ba495
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243806
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/components/menus/menuItem.css
+++ b/front_end/ui/components/menus/menuItem.css
@@ -5,7 +5,7 @@
  */
 
 .menu-item {
-  padding: 4px 30px 4px calc(10px + var(--menu-checkmark-width));
+  padding: var(--sys-size-3) 0 var(--sys-size-3) var(--sys-size-9);
   font-size: 12px;
   line-height: 16px;
   position: relative;
@@ -22,13 +22,13 @@
 }
 
 :host-context(devtools-menu-group) .menu-item {
-  padding: var(--sys-size-3) 0 var(--sys-size-3) 26px;
+  padding: var(--sys-size-3) 0 var(--sys-size-3) var(--sys-size-9);
 }
 
 .is-selected-item::before {
   content: "";
   position: absolute;
-  left: 10px;
+  left: var(--sys-size-2);
   top: 50%;
   transform: translateY(-50%);
   display: inline-block;
