--- a/front_end/ui/legacy/dialog.css
+++ b/front_end/ui/legacy/dialog.css
@@ -5,7 +5,8 @@
  */
 
 .widget {
-  box-shadow: var(--drop-shadow);
+  border-radius: var(--sys-shape-corner-small);
+  box-shadow: var(--sys-elevation-level3);
   background: var(--sys-color-cdt-base-container);
   justify-content: flex-start;
   align-items: stretch;
