Fix left side paddings for menus without checkmarks
Screenshot: https://imgur.com/a/Jvm60bv

Bug: 325442935
Change-Id: I25258d5cf6b5805eac0d62575440426514224e03
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6249245
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/components/menus/menuItem.css
+++ b/front_end/ui/components/menus/menuItem.css
@@ -17,6 +17,10 @@
   outline: none;
 }
 
+:host(.no-checkmark) .menu-item {
+  padding-left: 0;
+}
+
 :host(:not(:first-child)) .menu-item {
   border-top: var(--override-divider-line);
 }
