[GM3Restyling] Update animations panel empty states
Before: https://imgur.com/a/A6eCZFD
After: https://imgur.com/a/Fx2Ib6W
Bug: 325443331
Change-Id: I990fd9d69399779d9ffc5a4a5a14c5d7a4b1d181
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6254938
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/animation/animationTimeline.css
+++ b/front_end/panels/animation/animationTimeline.css
@@ -144,8 +144,8 @@ circle.animation-keyframe-point:active {
   cursor: pointer;
 }
 
-.animation-timeline-buffer,
-.animation-timeline-buffer-hint {
+.animation-timeline-buffer
+ {
   height: 48px;
   flex: 0 0 auto;
   border-bottom: 1px solid var(--sys-color-divider);
@@ -153,17 +153,8 @@ circle.animation-keyframe-point:active {
   padding: 0 2px;
 }
 
-.animation-timeline-buffer:empty,
 .animation-timeline-buffer-hint {
   display: none;
-}
-
-.animation-timeline-buffer:empty ~ .animation-timeline-buffer-hint {
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  z-index: 101;
-  display: flex;
 }
 
 .animation-time-overlay {
@@ -352,7 +343,8 @@ text.animation-timeline-grid-label {
 }
 
 .animation-timeline-rows,
-.animation-timeline-rows-hint {
+.animation-timeline-rows-hint,
+.animation-timeline-buffer-hint {
   flex-grow: 1;
   overflow: hidden auto;
   z-index: 1;
@@ -366,7 +358,12 @@ text.animation-timeline-grid-label {
   flex-grow: 0;
 }
 
-.animation-timeline-buffer:not(:empty) ~ .animation-timeline-rows:empty ~ .animation-timeline-rows-hint {
+.animation-timeline-rows:empty {
+  display: none;
+}
+
+.animation-timeline-buffer:not(:empty) ~ .animation-timeline-rows:empty ~.animation-timeline-buffer-hint:not(:empty) ~ .animation-timeline-rows-hint,
+.animation-timeline-buffer:empty ~ .animation-timeline-buffer-hint {
   font-size: 14px;
   display: flex;
   align-items: center;
