[AI Assistance] Patch agent to find files
Basic version of an agent for the change summary view that tells which
files need to be updated.

Bug: 393267670
Change-Id: I5d99269f697599603afc8764e319fa4e1337bc76
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6249519
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -748,6 +748,17 @@ main {
 
     --code-block-background-color: inherit;
   }
+
+  .workspace {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: var(--sys-size-4);
+  }
+
+  .patch-tmp-message {
+    padding: var(--sys-size-4);
+  }
 }
 
 @keyframes reveal {
