[AiAssistance] increase visibility of the floating button
Fixed: 396059754
Change-Id: I680c13c883553ab3db127c9431452c096efd994f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6257992
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -469,11 +469,6 @@
   margin-bottom: -5px;
 }
 
-.console-message-badge {
-  float: right;
-  margin-left: 4px;
-}
-
 .console-message-nowrap-below,
 .console-message-nowrap-below div,
 .console-message-nowrap-below span {
@@ -530,13 +525,13 @@ devtools-console-insight {
   --width: 24px;
 
   align-items: center;
-  background-color: var(--sys-color-cdt-base-container);
   border-radius: 50%;
   border: none;
   /* todo: extract to global styles and make it work with dark mode. */
   box-shadow: 0 1px 3px 1px rgb(0 0 0 / 15%), 0 1px 2px 0 rgb(0 0 0 / 30%); /* stylelint-disable-line plugin/use_theme_colors */
   box-sizing: border-box;
-  color: var(--sys-color-on-surface);
+  background-color: var(--sys-color-tonal-container);
+  color: var(--sys-color-on-tonal-container);
   font: var(--sys-typescale-body4-medium);
   height: var(--width);
   justify-content: center;
@@ -551,6 +546,28 @@ devtools-console-insight {
   right: 6px;
   display: none;
   width: var(--width);
+  z-index: 1;
+
+  .theme-with-dark-background & {
+    border: 1px solid var(--sys-color-neutral-outline);
+    background-color: var(--sys-color-primary);
+    color: var(--sys-color-on-primary);
+  }
+
+  & devtools-icon {
+    box-sizing: border-box;
+    flex-shrink: 0;
+    height: var(--sys-size-8);
+    min-height: var(--sys-size-8);
+    min-width: var(--sys-size-8);
+    width: var(--sys-size-8);
+
+    --devtools-icon-color: var(--sys-color-on-tonal-container);
+  }
+
+  .theme-with-dark-background & devtools-icon {
+    --devtools-icon-color: var(--sys-color-on-primary);
+  }
 }
 
 .hover-button:focus,
@@ -569,15 +586,6 @@ devtools-console-insight {
   outline-offset: 2px;
 }
 
-.hover-button devtools-icon {
-  box-sizing: border-box;
-  flex-shrink: 0;
-  height: 16px;
-  min-height: 16px;
-  min-width: 16px;
-  width: 16px;
-}
-
 .button-label {
   display: block;
   overflow: hidden;
@@ -587,17 +595,6 @@ devtools-console-insight {
     display: inline-block;
     vertical-align: -1px;
   }
-}
-
-.button-label .badge {
-  background: linear-gradient(135deg, var(--sys-color-gradient-primary), var(--sys-color-gradient-tertiary));
-  border-radius: var(--sys-size-3);
-  font-size: 9px;
-  font-weight: var(--ref-typeface-weight-bold);
-  line-height: 9px;
-  padding: var(--sys-size-3);
-  margin-left: var(--sys-size-4);
-  vertical-align: 0;
 }
 
 .console-message-wrapper:not(.has-insight) {
