[GM3Restyling] Update rest of NavigatorView confirm dialogs
Namely: exclude folder, delete folder and delete file dialogs

Screenshot: https://imgur.com/a/DHwyLP1

Bug: 325442935
Change-Id: Id452092f56a87c3c54dd4e53f23346d50b285157
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6257567
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/confirmDialog.css
+++ b/front_end/ui/legacy/confirmDialog.css
@@ -13,6 +13,7 @@
 .header {
   display: flex;
   margin: var(--sys-size-5) var(--sys-size-5) var(--sys-size-5) var(--sys-size-8);
+  padding-top: var(--sys-size-3);
   font: var(--sys-typescale-body2-medium);
 }
 
