[GM3Restyling] Layers panel empty states update
Before: https://imgur.com/a/vmiGVqU
After: https://imgur.com/a/ZcsJ7r4
Bug: 325443331
Change-Id: I9b5e82602e6b8323ac3c970a72c0edae5ab9af0a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6262906
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/layer_viewer/layers3DView.css
+++ b/front_end/panels/layer_viewer/layers3DView.css
@@ -7,6 +7,12 @@
 .layers-3d-view {
   overflow: hidden;
   user-select: none;
+
+  > .empty-view-scroller{
+    inset: 0;
+    position: absolute;
+    background-color: var(--sys-color-cdt-base-container);
+  }
 }
 
 devtools-toolbar {
