--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -99,6 +99,42 @@
   width: 100%;
   display: flex;
   position: relative;
+  flex-direction: column;
+  border: 1px solid var(--sys-color-neutral-outline);
+  border-radius: var(--sys-shape-corner-small);
+
+  &:focus-within {
+    outline: 1px solid var(--sys-color-primary);
+    border-color: var(--sys-color-primary);
+  }
+
+  &.disabled {
+    background-color: var(--sys-color-state-disabled-container);
+    border-color: transparent;
+  }
+
+  .image-input-container {
+    margin: var(--sys-size-3) var(--sys-size-5);
+    max-width: 100%;
+    width: fit-content;
+    position: relative;
+
+    devtools-button {
+      position: absolute;
+      top: var(--sys-size-1);
+      right: -4px;
+      border-radius: var(--sys-shape-corner-full);
+      border: 1px solid var(--sys-color-neutral-outline);
+      background-color: var(--sys-color-cdt-base-container);
+    }
+
+    img {
+      margin: var(--sys-size-4) 0;
+      max-height: var(--sys-size-18);
+      border: 1px solid var(--sys-color-neutral-outline);
+      border-radius: var(--sys-shape-corner-small);
+    }
+  }
 }
 
 .chat-input {
@@ -112,7 +148,7 @@
   resize: none;
   width: 100%;
   max-height: 84px; /* 4 rows */
-  border: 1px solid var(--sys-color-neutral-outline);
+  border: 0;
   border-radius: var(--sys-shape-corner-small);
   font: var(--sys-typescale-body4-regular);
   line-height: 18px;
@@ -128,13 +164,12 @@
   }
 
   &:focus-visible {
-    outline: 1px solid var(--sys-color-primary);
-    border-color: var(--sys-color-primary);
+    outline: 0;
   }
 
   &:disabled {
     color: var(--sys-color-state-disabled);
-    background-color: var(--sys-color-state-disabled-container);
+    background-color: transparent;
     border-color: transparent;
 
     &::placeholder {
