[AiAssistance] Send screenshot as multimodal input to LLM
Also, updates to display the screenshot in chat (including when chat is reopened from history)

Bug:394029490
Change-Id: If34f6b156ebf9b5b0a3c7ed955c9dbdee19be5ae
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6226459
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -283,6 +283,14 @@
   .aborted {
     color: var(--sys-color-on-surface-subtle);
   }
+
+  img {
+    margin: var(--sys-size-4) 0;
+    max-height: var(--sys-size-20);
+    border-radius: var(--sys-shape-corner-small);
+    border: 1px solid var(--sys-color-neutral-outline);
+    width: fit-content;
+  }
 }
 
 .select-element {
