[AiAssistance] Add ability to open image (sent as input) in a new tab
Bug:393036589
Change-Id: I17ba0674b6636028bdfd8845a78ceb5741372b89
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6262088
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -291,6 +291,10 @@
     border: 1px solid var(--sys-color-neutral-outline);
     width: fit-content;
   }
+
+  .image-link {
+    width: fit-content;
+  }
 }
 
 .select-element {
