--- a/front_end/ui/components/tooltip/tooltip.css
+++ b/front_end/ui/components/tooltip/tooltip.css
@@ -19,6 +19,7 @@
   & .container {
     width: max-content;
     margin: var(--sys-size-2);
+    font: var(--sys-typescale-body4-regular);
     color: var(--sys-color-inverse-on-surface);
     background-color: var(--sys-color-inverse-surface);
     box-shadow: var(--sys-elevation-level2);
