[css] Add a css value trace view
This CL adds a view for tracing the computation of a CSS value.

Bug: 396080529
Change-Id: I73c5be6ceb170028aac62886d549f4a690d7b213
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6269196
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/front_end/ui/components/icon_button/icon.css
+++ b/front_end/ui/components/icon_button/icon.css
@@ -33,10 +33,8 @@ span {
   width: 100%;
   height: 100%;
   background-color: currentcolor;
-  mask: var(--icon-url) center / contain no-repeat;
-
   /* Default to a (scaled) 1x1 filled mask image, so that the `Icon` renders as transparent until a "name" is set */
-  --icon-url: url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23000' xmlns='http://www.w3.org/2000/svg'%3E%3C/svg%3E ");
+  mask: var(--icon-url, url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23000' xmlns='http://www.w3.org/2000/svg'%3E%3C/svg%3E ")) center / contain no-repeat;
 }
 
 @media (forced-colors: active) {
